feat: javafx integration, to run you need in terminal a 'mvn clean javafx:run'